chapitres/20/api-gateway/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: test-istio
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  hostnames: ["api-gateway.eni.yannig.ovh"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mailpit
          port: 8025
